--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,9 @@
 <h2>Available drones</h2>
+{{#each drones}}
+<ul>
+    <li>Name: {{this.name}}</li>
+    <li>Propellers: {{this.propellers}}</li>
+    <li>Speed: {{this.speed}}</li>
+</ul>
+{{/each}}
+<a href='/drones/create'>Add a drone.</a>
