--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -5,5 +5,8 @@
     <li>Propellers: {{this.propellers}}</li>
     <li>Speed: {{this.speed}}</li>
 </ul>
+<a href='/drones/{{this.id}}/edit'>Edit drone.</a>
+<a href='/drones/{{this.id}}/delete'>Delete drone.</a>
 {{/each}}
+
 <a href='/drones/create'>Add a drone.</a>
